@@ -1,6 +1,7 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Mark pandocwalk and Pandoc::Filter::Lazy as deprecated
 
 0.25  2016-10-11 21:32:00 CEST
     - Improve pod2pandoc script
